feat: Implement internationalization support with next-international, add new localization structure, and remove Tolgee integration

--- a/packages/localization/tsconfig.json
+++ b/packages/localization/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "baseUrl": "."
   },
-  "include": ["**/tolgee/**/*.ts", "**/tolgee/**/*.tsx"],
+
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
