--- a/packages/localization/package.json
+++ b/packages/localization/package.json
@@ -13,8 +13,6 @@
     "@types/react": "19.1.5",
     "@types/react-dom": "^19.1.5",
     "next": "15.3.2",
-    "@tolgee/format-icu": "6.2.6",
-    "@tolgee/react": "6.2.6",
-    "@tolgee/web": "6.2.6"
+    "next-international": "^1.2.4"
   }
 }
